@@ -14,6 +14,7 @@ Release 1.5.2 (2013-03-??)
 - automatic library initialization macros
 - fixed GH #110: WebSocket accept() fails when Connection header contains multiple tokens
 - fixed GH# 71: WebSocket and broken Timeouts (POCO_BROKEN_TIMEOUTS)
+- fixed a warning in Poco/Crypto/OpenSSLInitializer.h
 
 Release 1.5.1 (2013-01-11)
 ==========================
